Simplify conditional

Testing for ‘== TRUE’ is confusing, thanks to dcb for reporting this.

https://bugzilla.gnome.org/show_bug.cgi?id=746030